fix nav-drawer z-index

--- a/briss-v1/assets/briss-navigation.css
+++ b/briss-v1/assets/briss-navigation.css
@@ -26,6 +26,7 @@
   width: 100vw;
   border-right: var(--border-red-5px);
   left: -100%;
+  z-index: 1000;
 }
 
 .nav-drawer-hide {
